# asciiquarium-rs

./: AGENTS.md  COMMIT_RANDOM_OBJECTS.txt  Cargo.toml  LICENSE  README  README.md  SPEC.md  TODO.md  asciiquarium  asciiquarium.pl
docs/: AGENTS.md  BIG_FISH_IMPLEMENTATION.md  CHANGELOG.md  DEVELOPMENT.md  FISH_SPECIES.md  FIXES_NEEDED.md  RANDOM_OBJECTS_FIXES_COMPLETE.md  RANDOM_OBJECTS_SUMMARY.md  RANDOM_OBJECTS_VERIFICATION.md  README.md  SESSION_COMPLETE.md  SPEC.md  TODO.md
src/: app.rs  depth.rs  entity.rs  main.rs  spawning.rs  ui.rs
src/entities/: big_fish.rs  bubble.rs  castle.rs  fish.rs  mod.rs  sea_monster.rs  seaweed.rs  shark.rs  ship.rs  water_surface.rs  whale.rs
