[package]
name = "asciiquarium-rs"
version = "0.1.0"
description = "Yet another aquarium/sea animation in ASCII art with Rust."
authors = ["G36maid <miku65434@gmail.com>"]
license = "GPL-2.0-only"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.8.5"
